Update StatusBarFooter to new save directory